Fixed some more spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
   .content {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-shrink: 0;
   }
 
@@ -64,5 +64,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    flex-shrink: 0;
   }
 }
