--- a/src/aboutMe.css
+++ b/src/aboutMe.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 601px) {
   .aboutMeDiv {
-    height: 100vh;
+    min-height: 100vh;
   }
 
   .aboutMe {
@@ -44,7 +44,7 @@
 
 @media only screen and (max-width: 600px) {
   .aboutMeDiv {
-    height: 100vh;
+    min-height: 100vh;
   }
 
   .aboutMe {
