--- a/src/banner.css
+++ b/src/banner.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 601px) {
   .bannerDiv {
-    height: 110vh;
+    min-height: 110vh;
   }
 
   .banner {
@@ -47,7 +47,7 @@
 
 @media only screen and (max-width: 600px) {
   .bannerDiv {
-    height: 110vh;
+    min-height: 110vh;
   }
 
   .banner {
