--- a/src/contact.css
+++ b/src/contact.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 601px) {
   .contactDiv {
-    height: 50vh;
+    min-height: 50vh;
     background-color: #aaf1fbe3;
     padding: 1%;
     z-index: 1;
@@ -35,7 +35,7 @@
 
 @media only screen and (max-width: 600px) {
   .contactDiv {
-    height: 40vh;
+    min-height: 40vh;
     background-color: #aaf1fbe3;
     padding: 1%;
     margin-top: 10vh;
