--- a/src/experience.css
+++ b/src/experience.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 601px) {
   .experienceDiv {
-    height: 120vh;
+    min-height: 120vh;
   }
 
   .experience {
