--- a/src/projects.css
+++ b/src/projects.css
@@ -221,7 +221,7 @@
     text-align: center;
     margin: 1%;
     padding-top: 12%;
-    height: 30%;
+    min-height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
